Subpixel rendering: Inline text selection painting should not snap to integral CSS pixel position. https://bugs.webkit.org/show_bug.cgi?id=132164

Reviewed by Darin Adler.

Inline text selection painting now snaps to device pixels. It uses the same rounding logic as
other painting functions.

Source/WebCore:
Test: fast/inline/hidpi-select-inline-on-subpixel-position.html

* rendering/EllipsisBox.cpp:
(WebCore::EllipsisBox::paintSelection):
* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paintSelection):
(WebCore::alignSelectionRectToDevicePixels): Deleted.
* rendering/InlineTextBox.h:

LayoutTests:
* fast/inline/hidpi-select-inline-on-subpixel-position-expected.html: Added.
* fast/inline/hidpi-select-inline-on-subpixel-position.html: Added.


Canonical link: https://commits.webkit.org/150457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168095 268f45cc-cd09-0410-ab3c-d52691b4dbfc